--- a/Develop/index.html
+++ b/Develop/index.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <div>
-                <a href=" "><button class="scores-header" id="view-high-scores">View High Scores</button></a>
+                <a href="highscores.html"><button class="scores-header" id="view-high-scores">View High Scores</button></a>
             </div>
         
             <div class="timer">
@@ -25,7 +25,9 @@
             <div id="quiz-start">
                 <div class="landing" id="start-screen">
                     <h1>Coding Quiz Challenge</h1>
-                    <p>Try to answer the following code-related questions within the time limit.</p>
+                    <p>Try to answer the following code-related questions within the time limit.<br>
+                    <br>
+                    For every incorrect answer you will docked ten points.</p>
                     <button id="start">Start Quiz</button>
                 </div>
             </div>
@@ -36,7 +38,7 @@
             </div>
 
             <div class="hide" id="quiz-end">
-                <h2>All Done!</h2>
+                <h2>Great job!</h2>
                 <p>Your final score is: <span id="score-final"></span></p>
                 <p>Please enter your name: <input type="text" max="3" />
                     <button id="submit-score">Submit</button>
