--- a/Develop/index.html
+++ b/Develop/index.html
@@ -27,7 +27,7 @@
                     <h1>Coding Quiz Challenge</h1>
                     <p>Try to answer the following code-related questions within the time limit.<br>
                     <br>
-                    For every incorrect answer you will docked ten points.</p>
+                    For every incorrect answer you will docked ten points. Good luck!</p>
                     <button id="start">Start Quiz</button>
                 </div>
             </div>
@@ -38,10 +38,10 @@
             </div>
 
             <div class="hide" id="quiz-end">
-                <h2>Great job!</h2>
+                <h2>Great Job!</h2>
                 <p>Your final score is: <span id="score-final"></span></p>
                 <p>Please enter your name: <input type="text" max="3" />
-                    <button id="submit-score">Submit</button>
+                    <a href="highscores.html"><button id="submit-score">Submit</button></a>
                 </p>
             </div>
 
