update id and source

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="hide" id="quiz-end">
                 <h2>Great Job!</h2>
                 <p>Your final score is: <span id="score-final"></span></p>
-                <p>Please enter your name: <input type="text" max="3" />
+                <p>Please enter your name: <input id="name" type="text" max="3" />
                     <a href="highscores.html"><button id="submit-score">Submit</button></a>
                 </p>
             </div>
