--- a/highscores.html
+++ b/highscores.html
@@ -16,6 +16,6 @@
         <a href="index.html"><button>Re-Start</button></a>
         <button id="clear">Clear Scores</button>
         </div>
-        <script src="./assets/js/hscore.js"></script>
+        <script src="./assets/js/highscores.js"></script>
     </body>
 </html>
